2012-11-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First support for Atmel JTAGICE3.  Guessed from USB sniffer
	traces made by Knut Schwichtenberg, and by similarity to
	JTAGICEmkII.
	Still quite incomplete, just megaAVR/JTAG is done by now.
	* jtag3.c: New file.
	* jtag3.h: (Dito.)
	* jtag3_private.h: (Dito.)
	* pgm_type.c: Add new programmers
	* avrdude.conf.in: (Dito.)
	* usbdevs.h: Add new parameters
	* Makefile.am: Add new files
	* usb_libusb.c: Handle separate event endpoint, and larger
	(USB 2.0) packet sizes

2012-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Change all the USB details (endpoint numbers,
	max transfer size etc.) to a per-programmer adjustable value.
	* serial.h: (Dito.)
	* stk500v2.c: (Dito.)
	* usbdevs.h: (Dito.)
	* usb_libusb.c: (Dito.)

2012-11-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Replace outdated FSF postal address by a reference to
	the GPL info on their website.
	* jtagmkII.c: (Dito.)
	* avrftdi.c: (Dito.)
	* wiring.c: (Dito.)
	* linux_ppdev.h: (Dito.)
	* serbb.h: (Dito.)
	* usbtiny.h: (Dito.)
	* confwin.c: (Dito.)
	* buspirate.h: (Dito.)
	* avrftdi.h: (Dito.)
	* wiring.h: (Dito.)
	* jtagmkII.h: (Dito.)
	* pickit2.c: (Dito.)
	* config.c: (Dito.)
	* term.c: (Dito.)
	* confwin.h: (Dito.)
	* avrdude.1: (Dito.)
	* windows/Makefile.am: (Dito.)
	* config.h: (Dito.)
	* pickit2.h: (Dito.)
	* term.h: (Dito.)
	* tools/get-hv-params.xsl: (Dito.)
	* tools/get-stk600-cards.xsl: (Dito.)
	* tools/get-stk600-devices.xsl: (Dito.)
	* tools/get-dw-params.xsl: (Dito.)
	* butterfly.c: (Dito.)
	* configure.ac: (Dito.)
	* doc/Makefile.am: (Dito.)
	* pgm_type.c: (Dito.)
	* butterfly.h: (Dito.)
	* jtagmkI.c: (Dito.)
	* ft245r.c: (Dito.)
	* COPYING: (Dito.)
	* pgm_type.h: (Dito.)
	* jtagmkI.h: (Dito.)
	* pindefs.h: (Dito.)
	* config_gram.y: (Dito.)
	* arduino.c: (Dito.)
	* arduino.h: (Dito.)
	* ser_win32.c: (Dito.)
	* serbb_win32.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)
	* freebsd_ppi.h: (Dito.)